<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bloody</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- general -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>

    <!-- main activity -->
    <string name="bp_measurement">Blood Pressure Measurement</string>
    <string name="personal_data">Enter Personal Data</string>

    <!-- wizard -->
    <string name="welcome_string">Welcome! Please enter some personal data before you start logging your blood pressure.</string>
    <string name="national_insurance_number">National Insurance Number</string>
    <string name="doctor_email">Doctors E-Mail</string>
    <string name="date_of_birth">Enter your date of birth</string>
    <string name="gender">Select your gender</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="gender_other">other</string>
    <string name="weight">Enter your weight</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="height">Enter your height</string>
    <string name="unit_cm">cm</string>
    <string name="unit_ft">ft</string>
    <string name="enter_values">Enter Values</string>
    
    <string name="measurement_time">I usually measure my blood pressure at</string>
    <string name="address_text">Please enter your address where you usually measure your blood pressure</string>
    <string name="use_gps_text">You can press the button to detect your address using GPS</string>
    <string name="use_gps_button">Use GPS</string>

    <!-- measurement -->
    <string name="systolic_value">Systolic</string>
    <string name="diastolic_value">Diastolic</string>
    <string name="heartrate_value">Heartrate</string>
    <string name="date_value">Date</string>
    <string name="time_value">Time</string>
    <string name="missing_pd_heading">Personal data missing!</string>
    <string name="missing_pd_text">We still need some personal information to process the measurements.</string>

    <!-- health_status -->
    <string name="health_status">Health Status</string>
    <string name="share">Share</string>
    <string name="timeline">History</string>

    <!-- charts -->
    <string name="charts_title">Health Status</string>
    <string name="charts_sub_blood">Blood pressure</string>
    <string name="charts_sub_air">Air pressure</string>
    <string name="charts_optimal_value">Optimal</string>
    <string name="charts_normal_value">Normal</string>
    <string name="charts_normal_high_value">Normal high</string>
    <string name="charts_hypertonia1_value">Hypertonia 1</string>
    <string name="charts_hypertonia2_value">Hypertonia 2</string>
    <string name="charts_hypertonia3_value">Hypertonia 3</string>

</resources>