<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_helth_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/health_status" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/smiley" />

            <Button
                android:id="@+id/button_share"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@+id/heartrateLayout"
                android:layout_marginTop="10dp"
                android:text="@string/share" />

            <Button
                android:id="@+id/button_timeline"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_below="@+id/buttonMeasurementSave"
                android:layout_marginTop="10dp"
                android:text="@string/timeline" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>