<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/systolicLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvSystolic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/systolic_value" />

                <EditText
                    android:id="@+id/etSystolic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:editable="false"
                    android:gravity="right"
                    android:hint="120" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/diastolicLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/systolicLinearLayout"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvDiastolic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/diastolic_value" />

                <EditText
                    android:id="@+id/etDiastolic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:editable="false"
                    android:gravity="right"
                    android:hint="80" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/heartrateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvHeartRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/heartrate_value" />

                <EditText
                    android:id="@+id/etHeartRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:editable="false"
                    android:gravity="right"
                    android:hint="75" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/heartrateLayout"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/date_value" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:editable="false"
                    android:gravity="right" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/dateLayout"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/time_value" />

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:editable="false"
                    android:gravity="right" >
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/buttonMeasurementSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heartrateLayout"
                android:layout_marginTop="10dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/buttonMeasurementCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonMeasurementSave"
                android:layout_marginTop="10dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>